--- a/app/src/main/res/layout/item_photo_thumbnail.xml
+++ b/app/src/main/res/layout/item_photo_thumbnail.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="72dp"
-    android:layout_height="88dp"
-    android:layout_marginEnd="8dp">
+    android:layout_height="88dp">
 
     <ImageView
         android:id="@+id/thumbnail_image"
