--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="qr_status_bottom_padding">24dp</dimen>
+    <dimen name="gallery_spacing">8dp</dimen>
 </resources>
