--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -50,6 +50,10 @@
             android:id="@+id/occasion_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="4dp"
             android:textAppearance="?attr/textAppearanceHeadline6"
             android:textColor="@android:color/white" />
 
